crates/sgf-core/tests/snapshots/ops_belts/140_belt_2_removed.snap
---
source: crates/sgf-core/tests/common/mod.rs
expression: value
---
Removed the belt at radius 150 from Tharbarite system #140
inverse: AddBelt { system: 140, kind: "rocky_asteroid_belt", radius: 150.0 }
