crates/sgf-core/tests/snapshots/ops_belts/belt_added_past_the_inner_radius.snap
---
source: crates/sgf-core/tests/common/mod.rs
expression: value
---
Added a belt (rocky_asteroid_belt) at radius 200 to system #1; set the inner radius of system #1 from 186.71 to 230
inverse: Batch { description: "Undo of \"Added a belt (rocky_asteroid_belt) at radius 200 to system #1; set the inner radius of system #1 from 186.71 to 230\"", ops: [RemoveBelt { system: 1, index: 0 }, SetInnerRadius { system: 1, radius: 186.71 }] }

--- gamestate
+++ gamestate
@@ -28966,6 +28966,15 @@
 			}
  
 		}
+		asteroid_belts=
+		{
+			
+			{
+				type="rocky_asteroid_belt"
+				inner_radius=200
+			}
+ 
+		}
 		arm=2
 		flags=
 		{
@@ -28976,8 +28985,8 @@
 			resource_region_exotic_gases_rich=62808000
 		}
 		initializer="ai_system_03"
-		inner_radius=186.71
-		outer_radius=286.71
+		inner_radius=230
+		outer_radius=330
 		starbases=
 		{
 			4294967295
