crates/sgf-core/tests/snapshots/ops_belts/belt_added_to_system_1.snap
---
source: crates/sgf-core/tests/common/mod.rs
expression: value
---
Added a belt (rocky_asteroid_belt) at radius 120 to Xu Nur #1
inverse: RemoveBelt { system: 1, index: 0 }

--- gamestate
+++ gamestate
@@ -28966,6 +28966,15 @@
 			}
  
 		}
+		asteroid_belts=
+		{
+			
+			{
+				type="rocky_asteroid_belt"
+				inner_radius=120
+			}
+ 
+		}
 		arm=2
 		flags=
 		{
