crates/sgf-core/tests/snapshots/ops_belts/belt_moved_past_the_inner_radius.snap
---
source: crates/sgf-core/tests/common/mod.rs
expression: value
---
Moved the belt at radius 90 in system #140 to 400; set the inner radius of system #140 from 190 to 430
inverse: Batch { description: "Undo of \"Moved the belt at radius 90 in system #140 to 400; set the inner radius of system #140 from 190 to 430\"", ops: [SetSaveBeltRadius { system: 140, index: 1, radius: 90.0 }, SetSaveInnerRadius { system: 140, radius: 190.0 }] }

--- gamestate
+++ gamestate
@@ -38949,7 +38949,7 @@
  
 			{
 				type="icy_asteroid_belt"
-				inner_radius=90
+				inner_radius=400
 			}
  
 		}
@@ -38966,8 +38966,8 @@
 		{
 			16777706 
 		}
-		inner_radius=190
-		outer_radius=290
+		inner_radius=430
+		outer_radius=530
 		starbases=
 		{
 			4294967295 64
